<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.surveymonkey.ui.splash.SplashFragment"
        android:label=""
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splashFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/mobile_navigation" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.surveymonkey.ui.auth.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.surveymonkey.ui.auth.register.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/formFragment"
        android:name="com.surveymonkey.ui.main.FormFragment"
        android:label="@string/form"
        tools:layout="@layout/fragment_form">
        <action
            android:id="@+id/action_formFragment_to_savedFragment"
            app:destination="@id/completedFragment" />
    </fragment>

    <action
        android:id="@+id/action_global_formFragment"
        app:destination="@id/formFragment"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popUpTo="@id/mobile_navigation" />

    <fragment
        android:id="@+id/usersFragment"
        android:name="com.surveymonkey.ui.completedForms.users.UsersFragment"
        android:label="@string/users"
        tools:layout="@layout/fragment_users">
        <action
            android:id="@+id/action_userFragment_to_completedFragment"
            app:destination="@id/completedFragment" />
    </fragment>

    <fragment
        android:id="@+id/completedFragment"
        android:name="com.surveymonkey.ui.completedForms.CompletedFragment"
        android:label="@string/completed_forms"
        tools:layout="@layout/fragment_completed_forms">

        <action
            android:id="@+id/action_savedFragment_to_savedDetailFragment"
            app:destination="@id/savedDetailFragment" />
        <argument
            android:name="userId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/savedDetailFragment"
        android:name="com.surveymonkey.ui.completedForms.detail.CompletedFormDetailFragment"
        android:label="@string/details"
        tools:layout="@layout/fragment_completed_form_detail">

        <argument
            android:name="pojo"
            app:argType="com.surveymonkey.data.model.FormPOJO" />
    </fragment>

    <action
        android:id="@+id/action_global_splashFragment"
        app:destination="@id/splashFragment"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popUpTo="@id/mobile_navigation" />

    <action android:id="@+id/action_global_userFragment" app:destination="@id/usersFragment" />

</navigation>